unpackaged/main/default/objects/Monthly_Review__c/Monthly_Review__c.object-meta.xml
<CustomObject>
    <label>Monthly Review</label>
    <nameField>
        <displayFormat>MR-{000000000}</displayFormat>
        <label>Monthly Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>