unpackaged/main/default/objects/Monthly_Review__c/fields/Counter_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Counter_Deposits__c</fullName>
    <label>Counter Deposits ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>