unpackaged/main/default/objects/Monthly_Review__c/fields/Day_12_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Day_12_Daily_Balance__c</fullName>
    <label>Day 12 Daily Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>