unpackaged/main/default/objects/Monthly_Review__c/fields/Deposits__c.field-meta.xml
<CustomField>
    <fullName>Deposits__c</fullName>
    <label>Deposits ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>