unpackaged/main/default/objects/Monthly_Review__c/fields/Deposits_Under_10k__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Under_10k__c</fullName>
    <label>Deposits Under 10k</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>