unpackaged/main/default/objects/Monthly_Review__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <formula>Case(Month__c, 
1,'Jan', 
2,'Feb', 
3,'Mar', 
4,'Apr', 
5,'May', 
6,'Jun', 
7,'Jul', 
8,'Aug', 
9,'Sep', 
10,'Oct', 
11,'Nov', 
12,'Dec','???')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Name</label>
    <type>Text</type>
</CustomField>