unpackaged/main/default/objects/Monthly_Review__c/fields/Months_from_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Months_from_Start_Date__c</fullName>
    <formula>((Year__c - YEAR(DATEVALUE(Credit_Review__r.CreatedDate))) * 12 
- MONTH(DATEVALUE(Credit_Review__r.CreatedDate))) 
+ Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months from Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>