unpackaged/main/default/objects/Monthly_Review__c/fields/Months_From_Start_Number__c.field-meta.xml
<CustomField>
    <fullName>Months_From_Start_Number__c</fullName>
    <label>Months From Start Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>