unpackaged/main/default/objects/Monthly_Review__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <formula>(Month__c * 0.01) + Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>